Make parameters location strongly typed